Integration with Jenkins and Github and running the build

--- a/myFramework/pom.xml
+++ b/myFramework/pom.xml
@@ -1,4 +1,5 @@
-	<project xmlns="http://maven.apache.org/POM/4.0.0"
+
+<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -58,8 +59,13 @@
 				<version>3.0.0-M3</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>myResources\XMLFiles\sampletest.xml</suiteXmlFile>
+						<suiteXmlFile>myResources\XMLFiles\${xmlFile}</suiteXmlFile>
 					</suiteXmlFiles>
+
+					<systemPropertyVariables>
+						<executionURL>${appURL}</executionURL>
+					</systemPropertyVariables>
+
 				</configuration>
 			</plugin>
 		</plugins>
